@@ -1,4 +1,5 @@
 ======================
+    ADDED: New commandline option: --profile <panel-profile>
     ADDED: Heiner's selection mode patch. Still alpha.
     ADDED: Ukrainian translation (thanks Ivan Petrouchtchak)
     ADDED: disk usage tool (alpha version)
